test/arrays/bradc/noelemtype.good
noelemtype.chpl:5: error: array without element type can only be used as a formal argument type
