test/arrays/bradc/noelemtype.chpl
config var n: integer = 10;

var D: domain(1) = 1..n;

var A: [D] = 0.0;

writeln("A is: ", A);
